--- a/Projects/Tweeter/index.html
+++ b/Projects/Tweeter/index.html
@@ -3,7 +3,6 @@
 <head><title>Tweeter</title>
     <link href="https://fonts.googleapis.com/css?family=Balthazar" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     
@@ -15,6 +14,10 @@
         </div>
     </div>
 
+
+    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.css" >
+    <script src="./node_modules/jquery/dist/jquery.js"></script>
+    <script src="./node_modules/handlebars/dist/handlebars.js"></script>
     <script src="render.js"></script>
      <!-- You'll create this soon --><script src="logic.js"></script> 
      <!-- You've got this --><script src="main.js"></script> 
